log
sá., 19 de mar. de 2022 10:17:51: 
 tests:  0|6
total_score: 0/70
75c7249
sá., 19 de mar. de 2022 10:18:55: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
6f13d9f
sá., 19 de mar. de 2022 10:21:46: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:0:
list.c: In function 'firstList':
list.c:41:10: error: 'List {aka struct List}' has no member named 'curret'; did you mean 'current'?
     list -> curret = list ->head;
          ^~
Compilation failed
6d10d16
sá., 19 de mar. de 2022 10:22:04: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
8022a72
sá., 19 de mar. de 2022 11:12:30: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:49:5: error: this 'if' clause does not guard... [-Werror=misleading-indentation]
     if(!list ->current || list -> current -> next);{
     ^~
list.c:49:52: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if'
     if(!list ->current || list -> current -> next);{
                                                    ^
cc1.exe: all warnings being treated as errors
Compilation failed
600cf69
sá., 19 de mar. de 2022 11:12:42: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
213ef80
sá., 19 de mar. de 2022 11:15:24: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
7cd7d65
sá., 19 de mar. de 2022 11:18:13: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
3c4580c
sá., 19 de mar. de 2022 11:20:55: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
4645034
do., 20 de mar. de 2022 21:10:32: 
 list.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:80:24: error: 'node' undeclared (first use in this function)
         list -> tail = node;
                        ^~~~
list.c:80:24: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
5cc78aa
do., 20 de mar. de 2022 21:11:34: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  9|3
total_score: 35/70
4b98b50
do., 20 de mar. de 2022 21:25:47: 
 list.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  9|3
total_score: 35/70
c4d5639
do., 20 de mar. de 2022 21:36:33: 
 list.c | 15 +++++++++------
 1 file changed, 9 insertions(+), 6 deletions(-)
 tests:  10|2
total_score: 45/70
5be3401
do., 20 de mar. de 2022 22:56:24: 
 list.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:70:32: error: expected ';' before ':' token
     nodo -> next = list -> head:
                                ^
Compilation failed
b92dc6e
do., 20 de mar. de 2022 22:56:38: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
f1fedfa
